deploy/k8s/sql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sql-data
spec:
  template:
    metadata:
      labels:
        app: eshop
        component: sql-data
    spec:
      containers:
      - name: sql-data
        image: microsoft/mssql-server-linux:2017-latest
