deploy/k8s/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp
spec:
  template:
    metadata:
      labels:
        app: beers
        component: webapp
    spec:
      containers:
      - name: webapp
        image: myrepodemo.azurecr.io/webapp
        imagePullPolicy: Always
        ports:
        - containerPort: 80                       
      imagePullSecrets:
      - name: acr-auth
---
