deploy/k8s/webapi-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapi
spec:
  template:
    metadata:
      labels:
        app: beers
        component: webapi
    spec:
      containers:
      - name: webapi
        image: myrepodemo.azurecr.io/webapi
        imagePullPolicy: Always
        ports:
        - containerPort: 80        
        livenessProbe:
          httpGet:
            path: /hc
            port: 80
            scheme: HTTP 
          initialDelaySeconds: 30
          periodSeconds: 60                 
      imagePullSecrets:
      - name: acr-auth
---
