deploy/k8s/sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: sql-data
  name: sql-data
spec:
  ports:
  - port: 1433
  selector:
    app: eshop
    component: sql-data
