deploy/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: beers
    component: webapp
  name: webapp
spec:
  ports:
  - port: 80
  selector:
    app: beers
    component: webapp
