deploy/k8s/webapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: beers
    component: webapi
  name: webapi
spec:
  ports:
  - port: 80
  selector:
    app: beers
    component: webapi
