deploy/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: beersapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:    
    - myhost
    secretName: tls-secret
  rules:
  - host: myhost
    http:
      paths:
      - path: /
        backend:
          serviceName:
          servicePort:
